# MEMorU

./: .gitignore  README.md
Blenda/: MEMorU.preview.blend  MEMorU.preview.blend1  Veritas Exploration Corp.blend  Veritas Exploration Corp.blend1  video2.blend  video2.blend1
Vault/: MEMorU - Полное досье игры.md  MEMorU - концепт.md  Иерархия мира.md
Vault/.obsidian/: graph.json  workspace.json
game/: CMakeLists.txt  UI.py  data_exch.py  game.cpp  logger.py  main.py  render.py
game/libs/glad/include/glad/: glad.h
game/libs/glad/src/: glad.c
game/modules/: entity.cpp  entity.h  logger.cpp  logger.h  renderer.cpp
